# rsmc-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  INTEGRATION.md  NO_DOCKER.md  SCHEMA.md  WEBSOCKET.md
migrations/: 0001_init.sql  0002_app_links.sql  0003_reactions.sql
src/: lib.rs  main.rs  state.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/config/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/handlers/: app_links.rs  auth.rs  channels.rs  files.rs  health.rs  messages.rs  mod.rs  notifications.rs  presence.rs  system.rs  users.rs  webhooks.rs
src/middleware/: auth.rs  mod.rs  validate.rs
src/models/: app_link.rs  channel.rs  file.rs  message.rs  mod.rs  notification.rs  user.rs  webhook.rs  ws_protocol.rs
src/services/: access.rs  events.rs  mod.rs  notifications.rs  pubsub.rs  webhooks.rs
src/ws/: handler.rs  hub.rs  mod.rs
tests/: integration.rs
